# graphiti-zep

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pi_proxy.py  pyproject.toml
docs/: api-mapping.md  architecture.md  troubleshooting.md
graphiti_zep/: __init__.py  client.py  server.py  utils.py
scripts/: patch_graphiti_core.py
tests/: test_client_contract.py  test_ingest_outcome_guard.py  test_structured_output.py
